--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,32 @@ body {
 font-family: 'Roboto', sans-serif;
 color: #434455;
 }
+
+/* header */
+.nav {
+   
+}
+
+.nav-list {
+
+}
+
+.nav-item {
+
+}
+
+.nav-link {
+
+}
+
+.contacts {
+
+}
+
+.contacts-item {
+
+}
+
+.contacts-link {
+    
+}
