--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,199 @@
+:root {
+  /* colors */
+  --primary-background: #ffffff;
+  --primary-brand: #4d5ae5;
+  --pressed-state: #404bbf;
+  --dark: #2e2f42;
+  --succes-100: #31d0aa;
+  --text: #434455;
+  --subtle-text: #8e8f99;
+  --accent: #e7e9fc;
+  --light: #f4f4fd;
+  --modal-overlay: #2e2f42;
+  --hero-background: #2e2f42;
+}
+
+body {
+  background-color: var(--primary-background);
+  color: var(--dark);
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 0.02em;
+}
+
 .list {
   list-style: none;
 }
 .link {
   text-decoration: none;
+}
+
+/* ------------------header sectoin---------------*/
+
+.logo {
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  line-height: 1.33;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.logo-item {
+  color: var(--primary-brand);
+}
+.logo-syllable {
+  color: var(--dark);
+}
+
+.nav-list {
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.nav-list-link {
+  font-weight: 500;
+  color: var(--dark);
+}
+
+.contact-list-link {
+  color: var(--text);
+}
+
+.nav-list-link:hover,
+.nav-list-link:focus,
+.contact-list-link:hover,
+.contact-list-link:focus {
+  color: var(--primary-brand);
+}
+
+/* ------------------hero-section------------------- */
+
+.hero-section {
+  background-color: var(--dark);
+}
+.main-title {
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  color: var(--primary-background);
+}
+
+.hero-btn {
+  font-family: inherit;
+  color: var(--primary-background);
+  background-color: var(--primary-brand);
+}
+
+.hero-btn:hover,
+.hero-btn:focus {
+  color: var(--primary-background);
+  background-color: var(--pressed-state);
+}
+
+/* ------------------advances------------------------ */
+.advances-section-list-item-slogan {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+}
+
+.advances-section-list-item-text {
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--text);
+}
+
+/* ----------------features---------------------- */
+.features-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+/* ------------------------teem----------------------*/
+.teem-section {
+  background-color: var(--light);
+}
+
+.teem-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+.teem-list-name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+}
+
+.teem-list-profession {
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  color: var(--text);
+}
+
+/*----------------------PORTFOLIO------------------ */
+
+/*---------------------- filter --------------------*/
+
+.filter-list {
+  text-align: center;
+}
+.filter-list-btn {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--primary-brand);
+  background-color: var(--light);
+}
+
+.filter-list-btn:hover,
+.filter-list-btn:focus {
+  color: var(--primary-background);
+  background-color: var(--pressed-state);
+}
+
+/* ---------------------examples------------------- */
+.examples-list-item-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+}
+
+.examples-list-item-text {
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--text);
+}
+/*-----------------------footer--------------------- */
+.footer {
+  background-color: var(--dark);
+}
+
+.footer-logo {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.footer-logo-syllable-secondary {
+  color: var(--light);
+}
+
+.footer-text {
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--accent);
 }
