--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body {
   color: var(--dark);
   font-family: 'Roboto', sans-serif;
   letter-spacing: 0.02em;
+  font-size: 16px;
 }
 
 .list {
@@ -21,6 +22,19 @@ body {
 }
 .link {
   text-decoration: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 /* ------------------header sectoin---------------*/
@@ -41,13 +55,16 @@ body {
 }
 
 .nav-list {
-  font-size: 16px;
   line-height: 1.5;
 }
 
 .nav-list-link {
   font-weight: 500;
   color: var(--dark);
+}
+
+.current {
+  color: var(--primary-brand);
 }
 
 .contact-list-link {
@@ -69,6 +86,7 @@ body {
 .main-title {
   font-weight: 700;
   font-size: 56px;
+  letter-spacing: 0.02em;
   line-height: 1.07;
   text-align: center;
   color: var(--primary-background);
@@ -98,7 +116,6 @@ body {
 }
 
 .advances-section-list-item-text {
-  font-size: 16px;
   line-height: 1.5;
   color: var(--text);
 }
@@ -110,6 +127,7 @@ body {
   line-height: 1.11;
   text-align: center;
   text-transform: capitalize;
+  letter-spacing: 0.02em;
 }
 
 /* ------------------------teem----------------------*/
@@ -123,6 +141,7 @@ body {
   line-height: 1.11;
   text-align: center;
   text-transform: capitalize;
+  letter-spacing: 0.02em;
 }
 
 .teem-list-name {
@@ -130,10 +149,10 @@ body {
   font-size: 20px;
   line-height: 1.2;
   text-align: center;
+  letter-spacing: 0.02em;
 }
 
 .teem-list-profession {
-  font-size: 16px;
   line-height: 1.5;
   text-align: center;
   color: var(--text);
@@ -170,11 +189,11 @@ body {
 }
 
 .examples-list-item-text {
-  font-size: 16px;
   line-height: 1.5;
   color: var(--text);
 }
-/*-----------------------footer--------------------- */
+
+/* -----------------------------footer------------------------------- */
 .footer {
   background-color: var(--dark);
 }
@@ -193,7 +212,6 @@ body {
 }
 
 .footer-text {
-  font-size: 16px;
   line-height: 1.5;
   color: var(--accent);
 }
